# saas/saas-experiment-manager/saas-knowledgebase-rest-server/controllers/Default.js
@@ -6,12 +6,20 @@ var url = require('url');
 var Default = require('./DefaultService');
 
 
+module.exports.experimentGet = function experimentGet (req, res, next) {
+  Default.experimentGet(req.swagger.params, res, next);
+};
+
 module.exports.experimentsGet = function experimentsGet (req, res, next) {
   Default.experimentsGet(req.swagger.params, res, next);
 };
 
 module.exports.experimentsPost = function experimentsPost (req, res, next) {
   Default.experimentsPost(req.swagger.params, res, next);
+};
+
+module.exports.snapshotGet = function snapshotGet (req, res, next) {
+  Default.snapshotGet(req.swagger.params, res, next);
 };
 
 module.exports.snapshotsGet = function snapshotsGet (req, res, next) {
