# saas/saas-experiment-manager/saas-knowledgebase-rest-server/controllers/DefaultService.js
@@ -52,16 +52,36 @@ exports.experimentsPost = function(args, res, next) {
     });
 }
 
+exports.experimentGet = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+   * expid (String)
+   **/
+
+	 Models.Experiment.find({_id: args.expid.value},function(err,data){
+	 	res.setHeader('Content-Type', 'application/json');
+	 	res.end(JSON.stringify(data));
+	 });
+};
+
 exports.snapshotsGet = function(args, res, next) {
   /**
    * parameters expected in the args:
    * expId (String)
   **/
 	console.log(args.expId)
-  Models.Snapshot.findOne({experimentId: args.expId.value},function(err,data){
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(data));
-  });
+	if(args.expId.value==null){
+		Models.Snapshot.find(function(err,data){
+	    res.setHeader('Content-Type', 'application/json');
+	    res.end(JSON.stringify(data));
+	  });
+	}
+	else{
+		Models.Snapshot.find({experimentId: args.expId.value},function(err,data){
+	    res.setHeader('Content-Type', 'application/json');
+	    res.end(JSON.stringify(data));
+	  });
+	}
 }
 
 exports.snapshotsPost = function(args, res, next) {
@@ -74,4 +94,16 @@ exports.snapshotsPost = function(args, res, next) {
         res.end(JSON.stringify(data));
       });
     });
+}
+
+exports.snapshotGet = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+   * snapid (String)
+   **/
+
+	 Models.Snapshot.find({_id: args.snapid.value},function(err,data){
+		 res.setHeader('Content-Type', 'application/json');
+		 res.end(JSON.stringify(data));
+	 });
 }
